# # Process this with autoconf to produce a configure script:
# # aclocal && autoconf && autoheader && automake
#
# AC_PREREQ(2.69)
#
# AC_INIT([ISO Fortran Binding Library for C-Fortran Interoperability], 1, [fortran@gcc.gnu.org, gcc@gcc.gnu.org])
#
# AC_CONFIG_HEADER(config.h)
#
# AC_CANONICAL_SYSTEM
# #ACX_NONCANONICAL_TARGET
#
# target_alias=${target_alias-$host_alias}
# AC_SUBST(target_alias)
#
# AM_INIT_AUTOMAKE([-Wall -Werror foreign])
# AC_USE_SYSTEM_EXTENSIONS
# AM_PROG_LIBTOOL
# AC_PROG_CC
# m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
#
# toolexecdir='$(libdir)/gcc-lib/$(target_alias)'
# toolexeclibdir='$(libdir)'
# AC_SUBST(toolexecdir)
# AC_SUBST(toolexeclibdir)
#
# GCC_BASE_VER
#
# AC_CONFIG_FILES(Makefile)
#
# AC_OUTPUT
AC_INIT([ISO Fortran Binding Library for C-Fortran Interoperability], 1, [fortran@gcc.gnu.org, gcc@gcc.gnu.org])
AM_INIT_AUTOMAKE([foreign no-dist-gz dist-xz])
LT_INIT

AC_PROG_CC

AC_OUTPUT([Makefile])
